# mdakit_sasa

./: .codecov.yml  .gitattributes  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py  zenodo.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
docs/source/autosummary/: mdakit_sasa.analysis.rst  mdakit_sasa.analysis.sasaanalysis.rst  mdakit_sasa.rst
mdakit_sasa/: __init__.py  _version.py
mdakit_sasa/analysis/: sasaanalysis.py
mdakit_sasa/data/: files.py
mdakit_sasa/tests/: conftest.py  test_mdakit_sasa.py  utils.py
mdakit_sasa/tests/analysis/: test_sasaanalysis.py
mdakit_sasa/tests/data/: image_vf.data
