[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdakit_sasa"
description = "This kit allows the calculation of a solvent-accessible-surface area of a trajectory"
license = {file = "LICENSE" }
authors = [
    {name = "Pegerto Fernandez", email = "pegerto.fernandez@brunel.ac.uk"},
]
maintainers = [
    {name = "Pegerto Fernandez", email = "pegerto.fernandez@brunel.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
    "freesasa>= 2.2.0"
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/pegerto/mdakit_sasa"
# documentation = "https://mdakit_sasa.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mdakit_sasa/tests",
]

[tool.black]
line-length = 80
extend-exclude = "versioneer.py"
